--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/BeautifulProductAudit.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/BeautifulProductAudit.cshtml
@@ -93,6 +93,8 @@
                 return false;
             }
 
+            ShowLoading();
+
             document.getElementById("goPage").value = self;
             return true;
         }
