--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/CheckList.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/CheckList.cshtml
@@ -189,7 +189,10 @@
         }
 
         function checkSubmitValue(self) {
+
             document.getElementById("goPage").value = self;
+
+            ShowLoading();
 
             var trlist = $("#CheckListTable tbody td.details-control");
 
