--- a/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab3_Layout.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab3_Layout.cshtml
@@ -28,7 +28,7 @@
             <td>@item.DefectTypeDesc</td>
             <td>@item.DefectCodeDesc</td>
             <td>@item.Qty</td>
-            <td> <img src="/Image/Icon/Picture.png" width="25" height="25" /></td>
+            <td> <img src="/Image/Icon/Picture.png" style="cursor: pointer;" onclick="OpenDefectPicture(@item.Ukey,@item.RowIndex)" width="25" height="25" /></td>
         </tr>
         }
     </tbody>
