--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/AddDefect.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/AddDefect.cshtml
@@ -127,6 +127,8 @@
                 "scrollCollapse": true,
                 "createdRow": function (row, data, index) {
                     $('td', row).css('background-color', '#FAA7A7');
+                    //取出DefectType 作為每一個大項的Key
+                    $('td', row).attr('ID', 'CheckListTable_' + data[1].split('-')[0]);
                 }
             });
 
@@ -158,15 +160,21 @@
     <input type='hidden' id='addDefct.ListFinalInspectionDefectItem[${RowIndex}].RowIndex' name='addDefct.ListFinalInspectionDefectItem[${RowIndex}].RowIndex' value='${RowIndex}'>
     <input type='hidden' id='addDefct.ListFinalInspectionDefectItem[${RowIndex}].DefectCode' name='addDefct.ListFinalInspectionDefectItem[${RowIndex}].DefectCode' value='${value[5]}'>
     <input type='hidden' id='addDefct.ListFinalInspectionDefectItem[${RowIndex}].DefectType' name='addDefct.ListFinalInspectionDefectItem[${RowIndex}].DefectType' value='${value[6]}'>
-    <input type='number' id='addDefct.ListFinalInspectionDefectItem[${RowIndex}].Qty' name='addDefct.ListFinalInspectionDefectItem[${RowIndex}].Qty'  min="0" style="width: 6vh" id='${value[0]} ' name='${value[0]}'  value='${value[2]}' /></td>
-                            <td> <img src="/Image/Icon/Camera.png" style="cursor: pointer;" onclick="ScreenShot(${value[0]},${RowIndex})" width="25vw" height="25vw" /></td>
-                            <td> <img src="/Image/Icon/Picture.png" style="cursor: pointer;" onclick="OpenPicture(${value[0]},${RowIndex})" width="25vw" height="25vw" /></td>
-                            </tr>`;
+    <input type='number' id='addDefct.ListFinalInspectionDefectItem[${RowIndex}].Qty' onchange='QtyChange("${value[6]}",${index},this)' name='addDefct.ListFinalInspectionDefectItem[${RowIndex}].Qty'  min="0" style="width: 6vh" id='${value[0]} ' name='${value[0]}'  value='${value[2]}' /></td>
+    <td> <img src="/Image/Icon/Camera.png" style="cursor: pointer;" onclick="ScreenShot(${value[0]},${RowIndex})" width="25vw" height="25vw" /></td>
+    <td> <img src="/Image/Icon/Picture.png" style="cursor: pointer;" onclick="OpenPicture(${value[0]},${RowIndex})" width="25vw" height="25vw" /></td>
+    </tr>`;
 
             });
             return '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">' +
                 sTr +
                 '</table>';
+        }
+
+        // Qty改變時，把值寫回DataTable的Datasource
+        function QtyChange(DefectType, index,obj) {
+
+            table.row($(`#CheckListTable_${DefectType}`).closest('tr')).data()[2][index][2] = $(obj).val();
         }
 
         function checkValue(self) {
@@ -182,6 +190,9 @@
                 msg.WithError('＜ RejectQty ＞ can not bigger than ＜SampleSize＞');
                 return false;
             }
+
+
+            ShowLoading();
 
             //為避免POST抓不到畫面上的控制項，因此要全部打開
             var trlist = $("#CheckListTable tbody td.details-control");
